--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             font-size: 18px;
             color: white;
             padding-top: 10%;
+            font-family: Arial;
         }
 
         .body {
